--- a/bymvvm/src/main/res/layout/activity_base.xml
+++ b/bymvvm/src/main/res/layout/activity_base.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <xml>测试</xml>
     <LinearLayout
         android:id="@+id/ll_root"
         android:layout_width="match_parent"
